src/yini_test/cases/golden/lenient/valid/numbers/zero-integer.yini
@yini

^ Numbers
val = 0

