src/yini_test/cases/golden/lenient/invalid/numbers/malformed-underscore-trailing.yini
@yini

^ Numbers
val = 123_

